reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 07/07/2020
ms.locfileid: "93197901"
---
# <span data-ttu-id="2a153-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="2a153-103">Import-Csv</span></span>

## <span data-ttu-id="2a153-104">摘要</span><span class="sxs-lookup"><span data-stu-id="2a153-104">SYNOPSIS</span></span>
<span data-ttu-id="2a153-105">使用逗号分隔值 (CSV) 文件中的项创建类似表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="2a153-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="2a153-106">SYNTAX</span></span>

### <span data-ttu-id="2a153-107">Delimiter（默认值）</span><span class="sxs-lookup"><span data-stu-id="2a153-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="2a153-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="2a153-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="2a153-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="2a153-109">DESCRIPTION</span></span>

<span data-ttu-id="2a153-110">`Import-Csv`Cmdlet 从 CSV 文件中的项创建类似表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="2a153-111">CSV 文件中的每列将成为自定义对象的属性，行中的项将成为属性值。</span><span class="sxs-lookup"><span data-stu-id="2a153-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="2a153-112">`Import-Csv` 适用于任何 CSV 文件，包括由 cmdlet 生成的文件 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="2a153-113">您可以使用 cmdlet 的参数 `Import-Csv` 来指定列标题行和项分隔符，或指示将 `Import-Csv` 当前区域性的列表分隔符用作项分隔符。</span><span class="sxs-lookup"><span data-stu-id="2a153-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="2a153-114">你还可以使用 `ConvertTo-Csv` 和 `ConvertFrom-Csv` cmdlet 将对象转换为 CSV 字符串 (和后) 。</span><span class="sxs-lookup"><span data-stu-id="2a153-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="2a153-115">这些 cmdlet 与 `Export-CSV` 和 `Import-Csv` cmdlet 相同，不同之处在于它们不处理文件。</span><span class="sxs-lookup"><span data-stu-id="2a153-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="2a153-116">如果 CSV 文件中的标题行条目包含空值或 null 值，则 PowerShell 将插入默认标题行名称并显示一条警告消息。</span><span class="sxs-lookup"><span data-stu-id="2a153-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="2a153-117">`Import-Csv` 使用字节顺序标记 (BOM) 来检测文件的编码格式。</span><span class="sxs-lookup"><span data-stu-id="2a153-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="2a153-118">如果文件没有 BOM，则假定编码为 UTF8。</span><span class="sxs-lookup"><span data-stu-id="2a153-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="2a153-119">示例</span><span class="sxs-lookup"><span data-stu-id="2a153-119">EXAMPLES</span></span>

### <span data-ttu-id="2a153-120">示例1：导入进程对象</span><span class="sxs-lookup"><span data-stu-id="2a153-120">Example 1: Import process objects</span></span>

<span data-ttu-id="2a153-121">此示例显示了如何导出然后导入进程对象的 CSV 文件。</span><span class="sxs-lookup"><span data-stu-id="2a153-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="2a153-122">`Get-Process`Cmdlet 将处理对象向下发送到 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="2a153-123">`Export-Csv`Cmdlet 将进程对象转换为 CSV 字符串，并将这些字符串保存在 Processes.csv 文件中。</span><span class="sxs-lookup"><span data-stu-id="2a153-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="2a153-124">`Import-Csv`Cmdlet 从 Processes.csv 文件导入 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="2a153-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="2a153-125">字符串保存在 `$P` 变量中。</span><span class="sxs-lookup"><span data-stu-id="2a153-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="2a153-126">将 `$P` 变量向下发送到 `Get-Member` cmdlet，该 cmdlet 显示导入的 CSV 字符串的属性。</span><span class="sxs-lookup"><span data-stu-id="2a153-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="2a153-127">`$P`变量将通过管道向下发送到 `Format-Table` cmdlet 并显示对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="2a153-128">示例2：指定分隔符</span><span class="sxs-lookup"><span data-stu-id="2a153-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="2a153-129">此示例演示如何使用 cmdlet 的 **分隔符** 参数 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="2a153-130">`Get-Process`Cmdlet 将进程对象向下发送到 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="2a153-131">`Export-Csv`Cmdlet 将进程对象转换为 CSV 字符串，并将这些字符串保存在 Processes.csv 文件中。</span><span class="sxs-lookup"><span data-stu-id="2a153-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="2a153-132">**分隔符** 参数用于指定冒号分隔符。</span><span class="sxs-lookup"><span data-stu-id="2a153-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="2a153-133">`Import-Csv`Cmdlet 从 Processes.csv 文件导入 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="2a153-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="2a153-134">字符串保存在 `$P` 变量中。</span><span class="sxs-lookup"><span data-stu-id="2a153-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="2a153-135">到 `$P` 变量将通过管道向下发送到 `Format-Table` cmdlet。</span><span class="sxs-lookup"><span data-stu-id="2a153-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="2a153-136">示例3：指定分隔符的当前区域性</span><span class="sxs-lookup"><span data-stu-id="2a153-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="2a153-137">此示例演示如何将 `Import-Csv` cmdlet 与 **UseCulture** 参数一起使用。</span><span class="sxs-lookup"><span data-stu-id="2a153-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="2a153-138">`Get-Culture`Cmdlet 使用嵌套属性 **TextInfo** 和 **ListSeparator** 获取当前区域性的默认列表分隔符。</span><span class="sxs-lookup"><span data-stu-id="2a153-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="2a153-139">`Get-Process`Cmdlet 将进程对象向下发送到 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="2a153-140">`Export-Csv`Cmdlet 将进程对象转换为 CSV 字符串，并将这些字符串保存在 Processes.csv 文件中。</span><span class="sxs-lookup"><span data-stu-id="2a153-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="2a153-141">**UseCulture** 参数使用当前区域性的默认列表分隔符。</span><span class="sxs-lookup"><span data-stu-id="2a153-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="2a153-142">`Import-Csv`Cmdlet 从 Processes.csv 文件导入 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="2a153-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="2a153-143">示例4：更改导入的对象中的属性名称</span><span class="sxs-lookup"><span data-stu-id="2a153-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="2a153-144">此示例演示如何使用的 **Header** 参数 `Import-Csv` 来更改生成的导入对象中的属性的名称。</span><span class="sxs-lookup"><span data-stu-id="2a153-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="2a153-145">`Start-Job`Cmdlet 可启动运行的后台作业 `Get-Process` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="2a153-146">作业对象会通过管道向下发送到 `Export-Csv` cmdlet 并转换为 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="2a153-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="2a153-147">**NoTypeInformation** 参数从 CSV 输出中删除类型信息标头，在 PowerShell Core 中是可选的。</span><span class="sxs-lookup"><span data-stu-id="2a153-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="2a153-148">`$Header`变量包含一个自定义标头，用于替换以下默认值： **HasMoreData** 、 **JobStateInfo** 、 **PSBeginTime** 、 **PSEndTime** 和 **PSJobTypeName** 。</span><span class="sxs-lookup"><span data-stu-id="2a153-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="2a153-149">`$A`变量使用 `Get-Content` cmdlet 从 Jobs.csv 文件获取 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="2a153-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="2a153-150">`$A`变量用于从文件中移除默认标头。</span><span class="sxs-lookup"><span data-stu-id="2a153-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="2a153-151">`Out-File`Cmdlet 将 Jobs.csv 文件的新版本保存在 `$A` 变量中。</span><span class="sxs-lookup"><span data-stu-id="2a153-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="2a153-152">`Import-Csv`Cmdlet 将导入 Jobs.csv 文件并使用 **标头** 参数应用该 `$Header` 变量。</span><span class="sxs-lookup"><span data-stu-id="2a153-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="2a153-153">`$J`变量包含导入的 **PSCustomObject** ，并在 PowerShell 控制台中显示该对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="2a153-154">示例5：使用 CSV 文件创建自定义对象</span><span class="sxs-lookup"><span data-stu-id="2a153-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="2a153-155">此示例演示如何通过使用 CSV 文件在 PowerShell 中创建自定义对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="2a153-156">若要创建 Links.csv 文件，请使用输出中显示的值 `Get-Content` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="2a153-157">`Get-Content`Cmdlet 将显示 Links.csv 文件。</span><span class="sxs-lookup"><span data-stu-id="2a153-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="2a153-158">`Import-Csv`Cmdlet 将导入 Links.csv 文件。</span><span class="sxs-lookup"><span data-stu-id="2a153-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="2a153-159">**标头** 参数指定属性名称 **LinkId** 和 **TopicTitle** 。</span><span class="sxs-lookup"><span data-stu-id="2a153-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="2a153-160">这些对象存储在变量中 `$A` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="2a153-161">`Get-Member`Cmdlet 显示 **标头** 参数中的属性名称。</span><span class="sxs-lookup"><span data-stu-id="2a153-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="2a153-162">`Where-Object`Cmdlet 将选择具有包含 **别名** 的 **TopicTitle** 属性的对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="2a153-163">示例6：导入缺少值的 CSV</span><span class="sxs-lookup"><span data-stu-id="2a153-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="2a153-164">此示例演示 `Import-Csv` 当 CSV 文件中的标题行包含 null 值或空值时，PowerShell 中的 cmdlet 是如何响应的。</span><span class="sxs-lookup"><span data-stu-id="2a153-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="2a153-165">`Import-Csv` 替换成为返回的对象的属性名称的缺失标题行的默认名称 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="2a153-166">若要创建 Projects.csv 文件，请使用示例的输出中所示的值 `Get-Content` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="2a153-167">`Get-Content`Cmdlet 将显示 Projects.csv 文件。</span><span class="sxs-lookup"><span data-stu-id="2a153-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="2a153-168">标题行缺少 **项目名称** 与 **已完成** 的值。</span><span class="sxs-lookup"><span data-stu-id="2a153-168">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="2a153-169">`Import-Csv`Cmdlet 将导入 Projects.csv 文件并显示一条警告消息，因为 **H1** 为默认标头名称。</span><span class="sxs-lookup"><span data-stu-id="2a153-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="2a153-170">`(Import-Csv -Path
.\Projects.csv).H1`命令获取 **H1** 属性值并显示警告。</span><span class="sxs-lookup"><span data-stu-id="2a153-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="2a153-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="2a153-171">PARAMETERS</span></span>

### <span data-ttu-id="2a153-172">-Delimiter</span><span class="sxs-lookup"><span data-stu-id="2a153-172">-Delimiter</span></span>

<span data-ttu-id="2a153-173">指定用于分隔 CSV 文件中的属性值的分隔符。</span><span class="sxs-lookup"><span data-stu-id="2a153-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="2a153-174">默认值为逗号 (,)。</span><span class="sxs-lookup"><span data-stu-id="2a153-174">The default is a comma (,).</span></span>

<span data-ttu-id="2a153-175">输入一个字符，例如冒号 (:)。</span><span class="sxs-lookup"><span data-stu-id="2a153-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="2a153-176">若要指定分号 (; ) 将其括在单引号内。</span><span class="sxs-lookup"><span data-stu-id="2a153-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="2a153-177">如果在文件中指定了实际字符串分隔符以外的其他字符，则 `Import-Csv` 无法从 CSV 字符串创建对象，并将返回 csv 字符串。</span><span class="sxs-lookup"><span data-stu-id="2a153-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2a153-178">-Encoding</span><span class="sxs-lookup"><span data-stu-id="2a153-178">-Encoding</span></span>

<span data-ttu-id="2a153-179">指定目标文件的编码类型。</span><span class="sxs-lookup"><span data-stu-id="2a153-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="2a153-180">默认值是 `Default`。</span><span class="sxs-lookup"><span data-stu-id="2a153-180">The default value is `Default`.</span></span>

<span data-ttu-id="2a153-181">此参数可接受的值如下所示：</span><span class="sxs-lookup"><span data-stu-id="2a153-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="2a153-182">`ASCII` 使用 ASCII (7 位) 字符集。</span><span class="sxs-lookup"><span data-stu-id="2a153-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="2a153-183">`BigEndianUnicode` 使用带有大 endian 字节顺序的 UTF-16。</span><span class="sxs-lookup"><span data-stu-id="2a153-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="2a153-184">`Default` 使用与系统的活动代码页相对应的编码 (通常为 ANSI) 。</span><span class="sxs-lookup"><span data-stu-id="2a153-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="2a153-185">`OEM` 使用与系统的当前 OEM 代码页相对应的编码。</span><span class="sxs-lookup"><span data-stu-id="2a153-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="2a153-186">`Unicode` 使用带有小 endian 字节顺序的 UTF-16。</span><span class="sxs-lookup"><span data-stu-id="2a153-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="2a153-187">`UTF7` 使用 UTF-8。</span><span class="sxs-lookup"><span data-stu-id="2a153-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="2a153-188">`UTF8` 使用 UTF-8。</span><span class="sxs-lookup"><span data-stu-id="2a153-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="2a153-189">`UTF32` 使用带有小 endian 字节顺序的 32 UTF-8。</span><span class="sxs-lookup"><span data-stu-id="2a153-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2a153-190">-Header</span><span class="sxs-lookup"><span data-stu-id="2a153-190">-Header</span></span>

<span data-ttu-id="2a153-191">为导入的文件指定备用列标题行。</span><span class="sxs-lookup"><span data-stu-id="2a153-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="2a153-192">列标题确定由创建的对象的属性名称 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="2a153-193">以逗号分隔的列表形式输入列标头。</span><span class="sxs-lookup"><span data-stu-id="2a153-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="2a153-194">不要将标头字符串括在引号内。</span><span class="sxs-lookup"><span data-stu-id="2a153-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="2a153-195">用单引号将每个列标题括起来。</span><span class="sxs-lookup"><span data-stu-id="2a153-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="2a153-196">如果输入的列标题少于数据列，则会丢弃剩余的数据列。</span><span class="sxs-lookup"><span data-stu-id="2a153-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="2a153-197">如果输入的列标题多于数据列，则将创建包含空数据列的其他列标题。</span><span class="sxs-lookup"><span data-stu-id="2a153-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="2a153-198">使用 Header  参数时，从 CSV 文件中删除原始标题行。</span><span class="sxs-lookup"><span data-stu-id="2a153-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="2a153-199">否则，将 `Import-Csv` 从标题行中的项创建额外的对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2a153-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="2a153-200">-LiteralPath</span></span>

<span data-ttu-id="2a153-201">指定要导入的 CSV 文件的路径。</span><span class="sxs-lookup"><span data-stu-id="2a153-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="2a153-202">与 **Path** 不同， **LiteralPath** 参数的值严格按照所键入的形式使用。</span><span class="sxs-lookup"><span data-stu-id="2a153-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="2a153-203">不会将任何字符解释为通配符。</span><span class="sxs-lookup"><span data-stu-id="2a153-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="2a153-204">如果路径包括转义符，请将其括在单引号中。</span><span class="sxs-lookup"><span data-stu-id="2a153-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="2a153-205">单引号指示 PowerShell 不要将任何字符解释为转义序列。</span><span class="sxs-lookup"><span data-stu-id="2a153-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="2a153-206">-Path</span><span class="sxs-lookup"><span data-stu-id="2a153-206">-Path</span></span>

<span data-ttu-id="2a153-207">指定要导入的 CSV 文件的路径。</span><span class="sxs-lookup"><span data-stu-id="2a153-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="2a153-208">还可以通过管道将路径传递给 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="2a153-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="2a153-209">-UseCulture</span></span>

<span data-ttu-id="2a153-210">将当前区域性的列表分隔符用作项分隔符。</span><span class="sxs-lookup"><span data-stu-id="2a153-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="2a153-211">若要查找区域性的列表分隔符，请使用以下命令： `(Get-Culture).TextInfo.ListSeparator` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2a153-212">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="2a153-212">CommonParameters</span></span>

<span data-ttu-id="2a153-213">此 cmdlet 支持以下常见参数：-Debug、-ErrorAction、-ErrorVariable、-InformationAction、-InformationVariable、-OutVariable、-OutBuffer、-PipelineVariable、-Verbose、-WarningAction 和 -WarningVariable。</span><span class="sxs-lookup"><span data-stu-id="2a153-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="2a153-214">有关详细信息，请参阅 [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)。</span><span class="sxs-lookup"><span data-stu-id="2a153-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="2a153-215">输入</span><span class="sxs-lookup"><span data-stu-id="2a153-215">INPUTS</span></span>

### <span data-ttu-id="2a153-216">System.String</span><span class="sxs-lookup"><span data-stu-id="2a153-216">System.String</span></span>

<span data-ttu-id="2a153-217">可以通过管道将包含路径的字符串传递给 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="2a153-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="2a153-218">输出</span><span class="sxs-lookup"><span data-stu-id="2a153-218">OUTPUTS</span></span>

### <span data-ttu-id="2a153-219">Object</span><span class="sxs-lookup"><span data-stu-id="2a153-219">Object</span></span>

<span data-ttu-id="2a153-220">此 cmdlet 将返回 CSV 文件中的内容所描述的对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="2a153-221">注释</span><span class="sxs-lookup"><span data-stu-id="2a153-221">NOTES</span></span>

<span data-ttu-id="2a153-222">由于导入的对象是对象类型的 CSV 版本，因此它们不会被格式化对象类型的非 CSV 版本的 PowerShell 类型格式条目识别和格式化。</span><span class="sxs-lookup"><span data-stu-id="2a153-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="2a153-223">命令的结果 `Import-Csv` 是一个字符串集合，这些字符串构成类似于表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="2a153-224">每行都是单独的字符串，因此可以使用对象的 **count** 属性对表行进行计数。</span><span class="sxs-lookup"><span data-stu-id="2a153-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="2a153-225">这些列是对象的属性，行中的项是属性值。</span><span class="sxs-lookup"><span data-stu-id="2a153-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="2a153-226">列标题行确定了列数和列名称。</span><span class="sxs-lookup"><span data-stu-id="2a153-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="2a153-227">列名称也是对象的属性的名称。</span><span class="sxs-lookup"><span data-stu-id="2a153-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="2a153-228">第一行将被解释为列标题，除非使用 **Header** 参数指定列标题。</span><span class="sxs-lookup"><span data-stu-id="2a153-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="2a153-229">如果任何行具有的值多于标题行，则忽略额外的值。</span><span class="sxs-lookup"><span data-stu-id="2a153-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="2a153-230">如果列标题行缺少值或包含 null 值或空值， `Import-Csv` 则将使用 **H** 后跟一个用于缺少的列标题和属性名称的数字。</span><span class="sxs-lookup"><span data-stu-id="2a153-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="2a153-231">在 CSV 文件中，通过以逗号分隔的对象属性值列表来表示每个对象。</span><span class="sxs-lookup"><span data-stu-id="2a153-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="2a153-232">使用对象的 **ToString ( # B1** 方法将属性值转换为字符串，因此它们由属性值的名称表示。</span><span class="sxs-lookup"><span data-stu-id="2a153-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="2a153-233">`Export-Csv` 不导出对象的方法。</span><span class="sxs-lookup"><span data-stu-id="2a153-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="2a153-234">相关链接</span><span class="sxs-lookup"><span data-stu-id="2a153-234">RELATED LINKS</span></span>

[<span data-ttu-id="2a153-235">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="2a153-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="2a153-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="2a153-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="2a153-237">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="2a153-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="2a153-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="2a153-238">Get-Culture</span></span>](Get-Culture.md)
