reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 07/03/2020
ms.locfileid: "93197153"
---
# <span data-ttu-id="e78a1-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="e78a1-103">Import-Csv</span></span>

## <span data-ttu-id="e78a1-104">摘要</span><span class="sxs-lookup"><span data-stu-id="e78a1-104">SYNOPSIS</span></span>
<span data-ttu-id="e78a1-105">使用逗号分隔值 (CSV) 文件中的项创建类似表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="e78a1-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="e78a1-106">SYNTAX</span></span>

### <span data-ttu-id="e78a1-107">DelimiterPath (默认值) </span><span class="sxs-lookup"><span data-stu-id="e78a1-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="e78a1-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="e78a1-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="e78a1-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="e78a1-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="e78a1-110">CultureLiteralPath</span><span class="sxs-lookup"><span data-stu-id="e78a1-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="e78a1-111">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="e78a1-111">DESCRIPTION</span></span>

<span data-ttu-id="e78a1-112">`Import-Csv`Cmdlet 从 CSV 文件中的项创建类似表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="e78a1-113">CSV 文件中的每列将成为自定义对象的属性，行中的项将成为属性值。</span><span class="sxs-lookup"><span data-stu-id="e78a1-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="e78a1-114">`Import-Csv` 适用于任何 CSV 文件，包括由 cmdlet 生成的文件 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="e78a1-115">您可以使用 cmdlet 的参数 `Import-Csv` 来指定列标题行和项分隔符，或指示将 `Import-Csv` 当前区域性的列表分隔符用作项分隔符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="e78a1-116">你还可以使用 `ConvertTo-Csv` 和 `ConvertFrom-Csv` cmdlet 将对象转换为 CSV 字符串 (和后) 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="e78a1-117">这些 cmdlet 与 `Export-CSV` 和 `Import-Csv` cmdlet 相同，不同之处在于它们不处理文件。</span><span class="sxs-lookup"><span data-stu-id="e78a1-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="e78a1-118">如果 CSV 文件中的标题行条目包含空值或 null 值，则 PowerShell 将插入默认标题行名称并显示一条警告消息。</span><span class="sxs-lookup"><span data-stu-id="e78a1-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="e78a1-119">从 PowerShell 6.0 开始， `Import-Csv` 现在支持 W3C 扩展日志文件格式。</span><span class="sxs-lookup"><span data-stu-id="e78a1-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="e78a1-120">示例</span><span class="sxs-lookup"><span data-stu-id="e78a1-120">EXAMPLES</span></span>

### <span data-ttu-id="e78a1-121">示例1：导入进程对象</span><span class="sxs-lookup"><span data-stu-id="e78a1-121">Example 1: Import process objects</span></span>

<span data-ttu-id="e78a1-122">此示例显示了如何导出然后导入进程对象的 CSV 文件。</span><span class="sxs-lookup"><span data-stu-id="e78a1-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="e78a1-123">`Get-Process`Cmdlet 将处理对象向下发送到 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="e78a1-124">`Export-Csv`Cmdlet 将进程对象转换为 CSV 字符串，并将这些字符串保存在 Processes.csv 文件中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="e78a1-125">`Import-Csv`Cmdlet 从 Processes.csv 文件导入 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="e78a1-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="e78a1-126">字符串保存在 `$P` 变量中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="e78a1-127">将 `$P` 变量向下发送到 `Get-Member` cmdlet，该 cmdlet 显示导入的 CSV 字符串的属性。</span><span class="sxs-lookup"><span data-stu-id="e78a1-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="e78a1-128">`$P`变量将通过管道向下发送到 `Format-Table` cmdlet 并显示对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="e78a1-129">示例2：指定分隔符</span><span class="sxs-lookup"><span data-stu-id="e78a1-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="e78a1-130">此示例演示如何使用 cmdlet 的 **分隔符** 参数 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="e78a1-131">`Get-Process`Cmdlet 将进程对象向下发送到 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="e78a1-132">`Export-Csv`Cmdlet 将进程对象转换为 CSV 字符串，并将这些字符串保存在 Processes.csv 文件中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="e78a1-133">**分隔符** 参数用于指定冒号分隔符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="e78a1-134">`Import-Csv`Cmdlet 从 Processes.csv 文件导入 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="e78a1-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="e78a1-135">字符串保存在 `$P` 变量中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="e78a1-136">到 `$P` 变量将通过管道向下发送到 `Format-Table` cmdlet。</span><span class="sxs-lookup"><span data-stu-id="e78a1-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="e78a1-137">示例3：指定分隔符的当前区域性</span><span class="sxs-lookup"><span data-stu-id="e78a1-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="e78a1-138">此示例演示如何将 `Import-Csv` cmdlet 与 **UseCulture** 参数一起使用。</span><span class="sxs-lookup"><span data-stu-id="e78a1-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="e78a1-139">`Get-Culture`Cmdlet 使用嵌套属性 **TextInfo** 和 **ListSeparator** 获取当前区域性的默认列表分隔符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="e78a1-140">`Get-Process`Cmdlet 将进程对象向下发送到 `Export-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="e78a1-141">`Export-Csv`Cmdlet 将进程对象转换为 CSV 字符串，并将这些字符串保存在 Processes.csv 文件中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="e78a1-142">**UseCulture** 参数使用当前区域性的默认列表分隔符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="e78a1-143">`Import-Csv`Cmdlet 从 Processes.csv 文件导入 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="e78a1-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="e78a1-144">示例4：更改导入的对象中的属性名称</span><span class="sxs-lookup"><span data-stu-id="e78a1-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="e78a1-145">此示例演示如何使用的 **Header** 参数 `Import-Csv` 来更改生成的导入对象中的属性的名称。</span><span class="sxs-lookup"><span data-stu-id="e78a1-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="e78a1-146">`Start-Job`Cmdlet 可启动运行的后台作业 `Get-Process` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="e78a1-147">作业对象会通过管道向下发送到 `Export-Csv` cmdlet 并转换为 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="e78a1-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="e78a1-148">**NoTypeInformation** 参数从 CSV 输出中删除类型信息标头，在 PowerShell Core 中是可选的。</span><span class="sxs-lookup"><span data-stu-id="e78a1-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="e78a1-149">`$Header`变量包含一个自定义标头，用于替换以下默认值： **HasMoreData** 、 **JobStateInfo** 、 **PSBeginTime** 、 **PSEndTime** 和 **PSJobTypeName** 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="e78a1-150">`$A`变量使用 `Get-Content` cmdlet 从 Jobs.csv 文件获取 CSV 字符串。</span><span class="sxs-lookup"><span data-stu-id="e78a1-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="e78a1-151">`$A`变量用于从文件中移除默认标头。</span><span class="sxs-lookup"><span data-stu-id="e78a1-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="e78a1-152">`Out-File`Cmdlet 将 Jobs.csv 文件的新版本保存在 `$A` 变量中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="e78a1-153">`Import-Csv`Cmdlet 将导入 Jobs.csv 文件并使用 **标头** 参数应用该 `$Header` 变量。</span><span class="sxs-lookup"><span data-stu-id="e78a1-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="e78a1-154">`$J`变量包含导入的 **PSCustomObject** ，并在 PowerShell 控制台中显示该对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="e78a1-155">示例5：使用 CSV 文件创建自定义对象</span><span class="sxs-lookup"><span data-stu-id="e78a1-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="e78a1-156">此示例演示如何通过使用 CSV 文件在 PowerShell 中创建自定义对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="e78a1-157">若要创建 Links.csv 文件，请使用输出中显示的值 `Get-Content` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="e78a1-158">`Get-Content`Cmdlet 将显示 Links.csv 文件。</span><span class="sxs-lookup"><span data-stu-id="e78a1-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="e78a1-159">`Import-Csv`Cmdlet 将导入 Links.csv 文件。</span><span class="sxs-lookup"><span data-stu-id="e78a1-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="e78a1-160">**标头** 参数指定属性名称 **LinkId** 和 **TopicTitle** 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="e78a1-161">这些对象存储在变量中 `$A` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="e78a1-162">`Get-Member`Cmdlet 显示 **标头** 参数中的属性名称。</span><span class="sxs-lookup"><span data-stu-id="e78a1-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="e78a1-163">`Where-Object`Cmdlet 将选择具有包含 **别名** 的 **TopicTitle** 属性的对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="e78a1-164">示例6：导入缺少值的 CSV</span><span class="sxs-lookup"><span data-stu-id="e78a1-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="e78a1-165">此示例演示 `Import-Csv` 当 CSV 文件中的标题行包含 null 值或空值时，PowerShell 中的 cmdlet 是如何响应的。</span><span class="sxs-lookup"><span data-stu-id="e78a1-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="e78a1-166">`Import-Csv` 替换成为返回的对象的属性名称的缺失标题行的默认名称 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="e78a1-167">若要创建 Projects.csv 文件，请使用示例的输出中所示的值 `Get-Content` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="e78a1-168">`Get-Content`Cmdlet 将显示 Projects.csv 文件。</span><span class="sxs-lookup"><span data-stu-id="e78a1-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="e78a1-169">标题行缺少 **项目名称** 与 **已完成** 的值。</span><span class="sxs-lookup"><span data-stu-id="e78a1-169">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="e78a1-170">`Import-Csv`Cmdlet 将导入 Projects.csv 文件并显示一条警告消息，因为 **H1** 为默认标头名称。</span><span class="sxs-lookup"><span data-stu-id="e78a1-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="e78a1-171">`(Import-Csv -Path
.\Projects.csv).H1`命令获取 **H1** 属性值并显示警告。</span><span class="sxs-lookup"><span data-stu-id="e78a1-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="e78a1-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="e78a1-172">PARAMETERS</span></span>

### <span data-ttu-id="e78a1-173">-Delimiter</span><span class="sxs-lookup"><span data-stu-id="e78a1-173">-Delimiter</span></span>

<span data-ttu-id="e78a1-174">指定用于分隔 CSV 文件中的属性值的分隔符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="e78a1-175">默认值为逗号 (,)。</span><span class="sxs-lookup"><span data-stu-id="e78a1-175">The default is a comma (,).</span></span>

<span data-ttu-id="e78a1-176">输入一个字符，例如冒号 (:)。</span><span class="sxs-lookup"><span data-stu-id="e78a1-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="e78a1-177">若要指定分号 (; ) 将其括在单引号内。</span><span class="sxs-lookup"><span data-stu-id="e78a1-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="e78a1-178">如果在文件中指定了实际字符串分隔符以外的其他字符，则 `Import-Csv` 无法从 CSV 字符串创建对象，并将返回 csv 字符串。</span><span class="sxs-lookup"><span data-stu-id="e78a1-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e78a1-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="e78a1-179">-Encoding</span></span>

<span data-ttu-id="e78a1-180">为导入的 CSV 文件指定编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="e78a1-181">默认值是 `utf8NoBOM`。</span><span class="sxs-lookup"><span data-stu-id="e78a1-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="e78a1-182">此参数可接受的值如下所示：</span><span class="sxs-lookup"><span data-stu-id="e78a1-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="e78a1-183">`ascii`：使用 ASCII (7 位) 字符集的编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="e78a1-184">`bigendianunicode`：使用大字节序字节顺序对 UTF-16 格式进行编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="e78a1-185">`oem`：使用 MS-DOS 和控制台程序的默认编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="e78a1-186">`unicode`：使用小 endian 字节顺序对 UTF-16 格式进行编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="e78a1-187">`utf7`：以 UTF-7 格式进行编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="e78a1-188">`utf8`：以 UTF-8 格式进行编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="e78a1-189">`utf8BOM`：以 UTF-8 格式编码 (BOM) </span><span class="sxs-lookup"><span data-stu-id="e78a1-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="e78a1-190">`utf8NoBOM`：以 UTF-8 格式编码，而不包含字节顺序标记 (BOM) </span><span class="sxs-lookup"><span data-stu-id="e78a1-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="e78a1-191">`utf32`：以32格式编码。</span><span class="sxs-lookup"><span data-stu-id="e78a1-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="e78a1-192">从 PowerShell 6.2 开始， **Encoding** 参数还允许已注册代码页的数字 id (如 `-Encoding 1251` (如) 所注册代码页的) 或字符串名称 `-Encoding "windows-1251"` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="e78a1-193">有关详细信息，请参阅 .NET 文档中的[编码。](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2)</span><span class="sxs-lookup"><span data-stu-id="e78a1-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e78a1-194">-Header</span><span class="sxs-lookup"><span data-stu-id="e78a1-194">-Header</span></span>

<span data-ttu-id="e78a1-195">为导入的文件指定备用列标题行。</span><span class="sxs-lookup"><span data-stu-id="e78a1-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="e78a1-196">列标题确定由创建的对象的属性名称 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="e78a1-197">以逗号分隔的列表形式输入列标头。</span><span class="sxs-lookup"><span data-stu-id="e78a1-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="e78a1-198">不要将标头字符串括在引号内。</span><span class="sxs-lookup"><span data-stu-id="e78a1-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="e78a1-199">用单引号将每个列标题括起来。</span><span class="sxs-lookup"><span data-stu-id="e78a1-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="e78a1-200">如果输入的列标题少于数据列，则会丢弃剩余的数据列。</span><span class="sxs-lookup"><span data-stu-id="e78a1-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="e78a1-201">如果输入的列标题多于数据列，则将创建包含空数据列的其他列标题。</span><span class="sxs-lookup"><span data-stu-id="e78a1-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="e78a1-202">使用 Header  参数时，从 CSV 文件中删除原始标题行。</span><span class="sxs-lookup"><span data-stu-id="e78a1-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="e78a1-203">否则，将 `Import-Csv` 从标题行中的项创建额外的对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e78a1-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="e78a1-204">-LiteralPath</span></span>

<span data-ttu-id="e78a1-205">指定要导入的 CSV 文件的路径。</span><span class="sxs-lookup"><span data-stu-id="e78a1-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="e78a1-206">与 **Path** 不同， **LiteralPath** 参数的值严格按照所键入的形式使用。</span><span class="sxs-lookup"><span data-stu-id="e78a1-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="e78a1-207">不会将任何字符解释为通配符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="e78a1-208">如果路径包括转义符，请将其括在单引号中。</span><span class="sxs-lookup"><span data-stu-id="e78a1-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="e78a1-209">单引号指示 PowerShell 不要将任何字符解释为转义序列。</span><span class="sxs-lookup"><span data-stu-id="e78a1-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="e78a1-210">-Path</span><span class="sxs-lookup"><span data-stu-id="e78a1-210">-Path</span></span>

<span data-ttu-id="e78a1-211">指定要导入的 CSV 文件的路径。</span><span class="sxs-lookup"><span data-stu-id="e78a1-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="e78a1-212">还可以通过管道将路径传递给 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="e78a1-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="e78a1-213">-UseCulture</span></span>

<span data-ttu-id="e78a1-214">将当前区域性的列表分隔符用作项分隔符。</span><span class="sxs-lookup"><span data-stu-id="e78a1-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="e78a1-215">若要查找区域性的列表分隔符，请使用以下命令： `(Get-Culture).TextInfo.ListSeparator` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="e78a1-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="e78a1-216">CommonParameters</span></span>

<span data-ttu-id="e78a1-217">此 cmdlet 支持以下常见参数：-Debug、-ErrorAction、-ErrorVariable、-InformationAction、-InformationVariable、-OutVariable、-OutBuffer、-PipelineVariable、-Verbose、-WarningAction 和 -WarningVariable。</span><span class="sxs-lookup"><span data-stu-id="e78a1-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="e78a1-218">有关详细信息，请参阅 [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)。</span><span class="sxs-lookup"><span data-stu-id="e78a1-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="e78a1-219">输入</span><span class="sxs-lookup"><span data-stu-id="e78a1-219">INPUTS</span></span>

### <span data-ttu-id="e78a1-220">System.String</span><span class="sxs-lookup"><span data-stu-id="e78a1-220">System.String</span></span>

<span data-ttu-id="e78a1-221">可以通过管道将包含路径的字符串传递给 `Import-Csv` 。</span><span class="sxs-lookup"><span data-stu-id="e78a1-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="e78a1-222">输出</span><span class="sxs-lookup"><span data-stu-id="e78a1-222">OUTPUTS</span></span>

### <span data-ttu-id="e78a1-223">Object</span><span class="sxs-lookup"><span data-stu-id="e78a1-223">Object</span></span>

<span data-ttu-id="e78a1-224">此 cmdlet 将返回 CSV 文件中的内容所描述的对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="e78a1-225">注释</span><span class="sxs-lookup"><span data-stu-id="e78a1-225">NOTES</span></span>

<span data-ttu-id="e78a1-226">由于导入的对象是对象类型的 CSV 版本，因此它们不会被格式化对象类型的非 CSV 版本的 PowerShell 类型格式条目识别和格式化。</span><span class="sxs-lookup"><span data-stu-id="e78a1-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="e78a1-227">命令的结果 `Import-Csv` 是一个字符串集合，这些字符串构成类似于表的自定义对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="e78a1-228">每行都是单独的字符串，因此可以使用对象的 **count** 属性对表行进行计数。</span><span class="sxs-lookup"><span data-stu-id="e78a1-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="e78a1-229">这些列是对象的属性，行中的项是属性值。</span><span class="sxs-lookup"><span data-stu-id="e78a1-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="e78a1-230">列标题行确定了列数和列名称。</span><span class="sxs-lookup"><span data-stu-id="e78a1-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="e78a1-231">列名称也是对象的属性的名称。</span><span class="sxs-lookup"><span data-stu-id="e78a1-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="e78a1-232">第一行将被解释为列标题，除非使用 **Header** 参数指定列标题。</span><span class="sxs-lookup"><span data-stu-id="e78a1-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="e78a1-233">如果任何行具有的值多于标题行，则忽略额外的值。</span><span class="sxs-lookup"><span data-stu-id="e78a1-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="e78a1-234">如果列标题行缺少值或包含 null 值或空值， `Import-Csv` 则将使用 **H** 后跟一个用于缺少的列标题和属性名称的数字。</span><span class="sxs-lookup"><span data-stu-id="e78a1-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="e78a1-235">在 CSV 文件中，通过以逗号分隔的对象属性值列表来表示每个对象。</span><span class="sxs-lookup"><span data-stu-id="e78a1-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="e78a1-236">使用对象的 **ToString ( # B1** 方法将属性值转换为字符串，因此它们由属性值的名称表示。</span><span class="sxs-lookup"><span data-stu-id="e78a1-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="e78a1-237">`Export-Csv` 不导出对象的方法。</span><span class="sxs-lookup"><span data-stu-id="e78a1-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="e78a1-238">`Import-Csv` 还支持 W3C 扩展日志格式。</span><span class="sxs-lookup"><span data-stu-id="e78a1-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="e78a1-239">以开头的行被 `#` 视为注释并被忽略，除非注释以开头 `#Fields:` 并包含列名称的分隔列表。</span><span class="sxs-lookup"><span data-stu-id="e78a1-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="e78a1-240">在这种情况下，cmdlet 将使用这些列名称。</span><span class="sxs-lookup"><span data-stu-id="e78a1-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="e78a1-241">这是 Windows IIS 和其他 web 服务器日志的标准格式。</span><span class="sxs-lookup"><span data-stu-id="e78a1-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="e78a1-242">有关详细信息，请参阅 [扩展日志文件格式](https://www.w3.org/TR/WD-logfile.html)。</span><span class="sxs-lookup"><span data-stu-id="e78a1-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="e78a1-243">相关链接</span><span class="sxs-lookup"><span data-stu-id="e78a1-243">RELATED LINKS</span></span>

[<span data-ttu-id="e78a1-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="e78a1-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="e78a1-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="e78a1-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="e78a1-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="e78a1-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="e78a1-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="e78a1-247">Get-Culture</span></span>](Get-Culture.md)
